[package]
name = "convergraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
itertools = "0.10.3"
petgraph = "0.6.2"
regex = "1.6.0"
serde = {version = "1.0.140", features = ["derive"] }
